[tool.poetry]
name = "sam-aws-ari"
version = "0.1.0"
description = ""
authors = ["AriHenrique <arihenriquedev@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.11"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

